tests/good/interpret/057-double-case.clap
val a =
  (case { x =>
    (case { y => y + x })(x)
  })(21)
