tests/bad/lexical/011-choice-type.clap
type t <a b> = { Left a + Right b }
 
